# indoor-navigation-system

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  build_and_run_ut.bat  build_and_run_ut.sh  commit_msg_template.txt  db_schema_info.sql  get_dependencies.sh  ins_service.hpp  install_commit_msg_template.sh  localization.cpp  localization.hpp  main.cpp  run_coverage.sh
ins-app/: README.md  build.gradle  build.sh  build_and_run_ut.sh
ins-app/app/: build.gradle
ins-app/app/src/androidTest/java/ins/developers/indoornavigationsystem/: ExampleInstrumentedTest.java
ins-app/app/src/main/: AndroidManifest.xml
ins-app/app/src/main/java/ins/developers/indoornavigationsystem/: MainActivity.java
ins-app/app/src/main/res/layout/: activity_main.xml
ins-app/app/src/main/res/values/: strings.xml
ins-app/app/src/test/java/ins/developers/indoornavigationsystem/: ExampleUnitTest.java  MainActivityUnitTest.java
ins-app/gradle/wrapper/: gradle-wrapper.properties
ins-node/: README.md  build_and_run_ut.sh
ins-node/hardware/: .gitignore  README.md  ins_node.brd  ins_node.sch
ins-node/src/: README.md
ins-node/src/examples/: MultipleSR04.ino  README.md  SR04.ino  automatedMovements.ino
ins-node/src/power_controller/: power_controller.ino
ins-node/src/wifi_module/: wifi_credentials.h  wifi_module.h  wifi_module.ino
ins-node/test/: CMakeLists.txt
ins-node/test/helpers/: power_controller_utils.h  test_utils.h
ins-node/test/ins_mock/: ESP8266WiFi.h  LowPowerMock.h
ins-node/test/stubs/: power_controller_utils.h
ins-node/test/stubs/avr/: interrupt.h  power.h  sleep.h  wdt.h
ins-node/test/ut/: README.md  ins_node_test.cc  power_controller_test.cc  wifi_module_test.cc
ins-node/test/ut/examples/: GP2D120_ir_test.cc  MultipleSR04_test.cc  ObstacleAvoider_test.cc
server/: .clang-format  CMakeLists.txt  README.md  WifiNodeLCFG.xml  build.sh  build_and_run_ut.sh  data_store.cpp  db_schema_info.sql  ins_server  ins_service.cpp  types.hpp  wifiNode.xsd
server/include/: ResolveLocation.h  WifiAccessPointLocalConfig.h  WifiNode.h  data_store.hpp  ins_service.hpp  lib_wrapper.hpp  localization.hpp  types.hpp
server/src/: ResolveLocation.c  WifiAccessPointLocalConfig.c  WifiNode.c  data_store.cpp  ins_service.cpp  lib_wrapper.cpp  localization.cpp  main.cpp
server/test/: CMakeLists.txt  suite_data_store.cpp  suite_ins_service.cpp  suite_localization.cpp
server/test/mocks/: mock_WifiAccessPointLocalConfig.c  mock_WifiAccessPointLocalConfig.h  mock_WifiNode.c  mock_WifiNode.h  mock_data_store.cpp  mock_data_store.hpp  mock_lib_wrapper.cpp  mock_lib_wrapper.hpp  mock_localization.cpp  mock_localization.hpp
server/test/mocks/pistache/: endpoint.h  http.h  mock_pistache.hpp  router.h
server/test/test_libs/: CMakeLists.txt
server/test/test_libs/gmock-gtest/: CMakeLists.txt
src/: README.md  SRF08.ino  manualControl.ino  singleOdometer.ino
src/examples/: obstacleAvoider.ino
test/: CMakeLists.txt  DigitalReadSerial_unittest.cc  build.sh  build_and_run_ut.sh
test/arduino_mock/: CMakeLists.txt
test/smartcar_mock/: Car.h  HeadingSensors.h  InfraredSensors.h  Motors.h  Odometer.h  Smartcar.h  SteeringMotor.h  SteeringMotors.h  ThrottleMotor.h  UltrasonicSensors.h  pins_arduino.h
test/ut/: AutomatedMovements_test.cc  DigitalReadSerial_test.cc  GP2D120_ir_test.cc  GyroscopeDisplacement_test.cc  ManualControl_test.cc  ObstacleAvoider_test.cc  README.md  SR04_test.cc  SRF08_test.cc  SingleOdometer_test.cc  manualControl_test.cc
test/ut/examples/: DigitalReadSerial_test.cc  GyroscopeDisplacement_test.cc  ManualControl_test.cc  README.md
